# sagnos

./: .gitignore  README.md  pyproject.toml
example/: backend.py
example/flutter_app/: pubspec.yaml
example/flutter_app/lib/: main.dart
sagnos/: __init__.py  cli.py  codegen.py  config.py  core.py  schema.py  server.py  websocket.py
tests/: test_codegen.py  test_core.py  test_schema.py
