[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sagnos"
version = "0.1.0"
description = "The Spring Boot of Python for Flutter"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Siddhardh" }]
keywords = ["flutter", "dart", "backend", "framework"]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "requests>=2.31.0",
    "websockets>=12.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "watchfiles>=0.21.0",
    "psutil>=5.9.0",
]

[project.scripts]
sagnos = "sagnos.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["sagnos*"]

[tool.pytest.ini_options]
pythonpath = ["."]